syntax = "proto3";

package listingpb;

option go_package = "/listingpb";

import "google/protobuf/timestamp.proto";

service ListingService {
  rpc GetAllListings(GetAllListingsRequest) returns (GetAllListingsResponse);
  rpc AddListing(AddListingRequest) returns (AddListingResponse);
  rpc EditListing(EditListingRequest) returns (Empty);
  rpc DeleteListing(DeleteListingRequest) returns (Empty);
  rpc AddLike(AddLikeRequest) returns (Empty);
  rpc RemoveLike(RemoveLikeRequest) returns (Empty);
}

message Empty {}

message Listing {
  string id = 1;
  string title = 2;
  string description = 3;
  string address = 4;
  int64 price = 5;
  string author_id = 6;
  google.protobuf.Timestamp created_at = 7;
  string image_url = 8;
  int64 likes = 9;
  bool is_liked = 10;
  bool is_yours = 11;
  string author_login = 12;
}

message GetAllListingsRequest {
  string user_id = 1;
  string target_user_id = 2;
  string sort_field = 3;
  string sort_order = 4;
  bool only_liked = 5;
  int64 page = 6;
  int64 min_price = 7;
  int64 max_price = 8;
}

message GetAllListingsResponse {
  repeated Listing listings = 1;
  int64 total_pages = 2;
  int64 current_page = 3;
}

message AddListingRequest {
  string title = 1;
  string description = 2;
  string address = 3;
  int64 price = 4;
  string author_id = 5;
  string image_url = 6;
}

message AddListingResponse {
  string id = 1;
}

message EditListingRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string address = 4;
  int64 price = 5;
  string image_url = 6;
  string user_id = 7;
}

message DeleteListingRequest {
  string id = 1;
  string user_id =2;
}

message AddLikeRequest {
  string listing_id = 1;
  string user_id = 2;
}

message RemoveLikeRequest {
  string listing_id = 1;
  string user_id = 2;
}